--- a/styles/sass/Partials/_homeSection.scss
+++ b/styles/sass/Partials/_homeSection.scss
@@ -24,8 +24,8 @@
     color: $orange;
 }
 
-.particlesJs {
-    height: 100%;
-    position: absolute;
-    width: 100%;
-}
+// .particlesJs {
+//     height: 100%;
+//     position: absolute;
+//     width: 100%;
+// }
