--- a/styles/styles.css
+++ b/styles/styles.css
@@ -236,6 +236,10 @@ a {
 }
 
 .allSectionsWrapper {
+  opacity: 0.9;
+  display: none;
+  -webkit-transition: opacity 1s ease-in;
+  transition: opacity 1s ease-in;
   padding-left: 11.75rem;
 }
 
@@ -260,6 +264,63 @@ a {
   line-height: 1.95;
 }
 
+.preloader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #111;
+  min-height: 100vh;
+  z-index: 100;
+  color: #111;
+}
+
+.preloader span {
+  display: inline-block;
+  background-color: #dc3545;
+  width: 0px;
+  height: 0px;
+  border-radius: 50%;
+  margin: 0 8px;
+  -webkit-transform: translate3d(0);
+          transform: translate3d(0);
+  -webkit-animation: bounce 0.6s infinite alternate;
+          animation: bounce 0.6s infinite alternate;
+}
+
+.preloader span:nth-child(2) {
+  background-color: #fff;
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+}
+
+.preloader span:nth-child(3) {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+
+@-webkit-keyframes bounce {
+  to {
+    width: 16px;
+    height: 16px;
+    -webkit-transform: translate3d(0, -16px, 0);
+            transform: translate3d(0, -16px, 0);
+  }
+}
+
+@keyframes bounce {
+  to {
+    width: 16px;
+    height: 16px;
+    -webkit-transform: translate3d(0, -16px, 0);
+            transform: translate3d(0, -16px, 0);
+  }
+}
 html {
   font-size: 125%;
   font-family: "Open Sans", sans-serif;
@@ -434,12 +495,6 @@ h6 {
 
 .homeLastName {
   color: #dc3545;
-}
-
-.particlesJs {
-  height: 100%;
-  position: absolute;
-  width: 100%;
 }
 
 .aboutContainer {
